--- a/etc/calamares/modules/shellprocess-before.conf
+++ b/etc/calamares/modules/shellprocess-before.conf
@@ -1,9 +1,9 @@
 i18n:
-     name: "Preparing your system for XelphLinux"
+     name: "Preparing your system for nidusOS"
 
 dontChroot: false
 timeout: 999
 script:
-    - command: "/usr/local/bin/xelphlinux-before"
+    - command: "/usr/local/bin/nidus-before"
     - command: "/usr/local/bin/remove-nvidia"
 
