--- a/etc/calamares/modules/shellprocess-final.conf
+++ b/etc/calamares/modules/shellprocess-final.conf
@@ -1,7 +1,7 @@
 i18n:
-     name: "Preparing your system for XelphLinux"
+     name: "Preparing your system for nidusOS"
 
 dontChroot: false
 timeout: 999
 script:
-    - command: "/usr/local/bin/xelphlinux-final"
+    - command: "/usr/local/bin/nidus-final"
