--- a/etc/calamares/modules/bootloader.conf
+++ b/etc/calamares/modules/bootloader.conf
@@ -5,7 +5,7 @@ img: "_default_image_"
 fallback: "_fallback_image_"
 timeout: "10"
 
-bootloaderEntryName: "XelphLinux"
+bootloaderEntryName: "nidusOS"
 
 grubInstall: "grub-install"
 grubMkconfig: "grub-mkconfig"
