--- a/etc/calamares/modules/packages.conf
+++ b/etc/calamares/modules/packages.conf
@@ -25,6 +25,6 @@ operations:
     - qt5-svg
     - libxinerama
     - xorg-xrdb
-    - xelph-calamares-config-btrfs-git
-    - xelph-calamares-git
+    - nidus-calamares-config-git
+    - nidus-calamares-git
     - nano
